minikube/oauth2-proxy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: oauth2-proxy
  namespace: ingress-nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: oauth2-proxy
  template:
    metadata:
      labels:
        app: oauth2-proxy
    spec:
      containers:
      - args:
        - --provider=keycloak-oidc
        - --oidc-issuer-url=http://host.minikube.internal:8080/realms/3TR
        - --oidc-extra-audience=cellxgene
        - --client-id=cellxgene
        - --client-secret=Ao75qcpNOzXgyzQ9vtBXCSlvDWbSJIoU
        - --cookie-secure=false
        - --cookie-secret=dca70153c0ffd68a98696b6957b26e88
        - --cookie-refresh=1m
        - --cookie-expire=30m
        - --cookie-domain=minikube.local
        - --whitelist-domain=minikube.local
        - --email-domain=*
        - --insecure-oidc-allow-unverified-email=true
        - --ssl-insecure-skip-verify=true
        - --ssl-upstream-insecure-skip-verify=true
        - --pass-authorization-header=true
        - --pass-access-token=true
        - --set-authorization-header=true
        - --set-xauthrequest=true
        - --code-challenge-method=S256
        - --upstream=file:///dev/null
        - --http-address=0.0.0.0:8091
        image: quay.io/oauth2-proxy/oauth2-proxy:v7.5.1
        name: oauth2-proxy
        ports:
        - containerPort: 8091
---
apiVersion: v1
kind: Service
metadata:
  labels:
    name: oauth2-proxy
  name: oauth2-proxy
  namespace: ingress-nginx
spec:
  ports:
  - name: http
    port: 8091
  selector:
    app: oauth2-proxy
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/proxy-buffer-size: 64k
  name: oauth2-proxy
  namespace: ingress-nginx
spec:
  ingressClassName: nginx
  rules:
  - host: minikube.local
    http:
      paths:
      - backend:
          service:
            name: oauth2-proxy
            port:
              number: 8091
        path: /oauth2
        pathType: Prefix
